--- a/app/views/personal_loan/step4.html.erb
+++ b/app/views/personal_loan/step4.html.erb
@@ -64,7 +64,7 @@
           </div>
           <div class="form-group">
             <span>Office Pincode <span>*</span></span>
-            <%= f.text_field(:office_pincode, class: "form-control") %>
+            <%= f.number_field(:office_pincode, class: "form-control") %>
           </div>
           <div class="form-group">
             <span>Mailing Address <span>*</span></span>
