--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -1,3 +1,15 @@
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 .ptnr-1-row {
   padding-bottom: 40px;
 }
@@ -143,6 +155,84 @@ textarea.error, input.error, select.error {
   border: 1px dotted #ff0000;
 }
 
+.main-thx-row {
+  border: 2px solid #20d950;  
+}
+.thank-row {
+  padding: 20px;
+  .congo {
+    height: 53px;
+  }
+  .float-left {
+    position: relative;
+    font-weight: bold;
+    color: #04194b;
+  }
+  .float-left:after {
+    content: '';
+    width: 90px;
+    height: 4px;
+    background: #6c70ca;
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+  }
+  .float-right {
+    float: right!important;
+    background-color: #04194b;
+    color: #ffffff;
+    padding: 5px;
+    font-size: 15px;
+    font-weight: bold;
+  }
+}
+
+.bank-thank-row {
+  background: #032361;
+  .bank-thx-img {
+    margin: 40px;
+    width: 280px;
+    border-left: 0px;
+    padding-left: 0px;
+    background-color: #032361;
+  }
+  div{
+    margin: 20px 20px 20px 40px;
+    border-left: 5px solid #7e6c6c;
+    padding-left: 15px;
+    background-color: #23407a;
+    padding: 5px 5px 5px 20px;
+    p {
+      margin-bottom: 0px;
+      color: #ffffff;
+    }
+  }
+}
+
+.contact-info {
+  display: flex;
+  div {
+    display: flex;
+    padding: 10px 10px 10px 0px;
+    background: #dddddd;
+    border-left: 5px solid #00c0b8;
+    span {
+      font-size: 45px;
+      color: #6c70ca;
+    }
+    span:before {
+      padding-left: 6px;    
+    }
+    p {
+      margin-left: 12px;
+      margin-bottom: 0px;
+    }
+  }
+}
+
+.custom-container {
+  padding: 50px 0px 50px 0px;
+}
 
 @media only screen and (max-width: 600px) {
   .header-description {
