--- a/app/views/business_loan/step6.html.erb
+++ b/app/views/business_loan/step6.html.erb
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row align-items-end">
             <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-                <h2>New Personal Loan</h2>
-                <h4>Apply for new personal loan</h4>
+                <h2>New Business Loan</h2>
+                <h4>Apply for new business loan</h4>
             </div>
             <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
                 <ul class="breadcrumb">
@@ -22,7 +22,7 @@
       </div>
       <div>
         <p>Loan Amount</p>
-        <p><%= number_to_currency(@personal_loan.loan_amount, unit: "₹ ") %></p>
+         <p><%= number_to_currency(@business_loan.loan_amount, unit: "₹ ") %></p>
       </div>
       <div>
         <p>EMI</p>
@@ -36,7 +36,7 @@
     <div class="col-md-8 col-lg-8 col-sm-12 thank-row">
       <div class="congo">
         <h3 class="float-left">CONGRATULATIONS</h3>
-        <h4 class="float-right">Reference Number: <%= @personal_loan.reference_number %></h4>        
+        <h4 class="float-right">Reference Number: <%= @business_loan.reference_number %></h4>        
       </div>
       <div>
         <p>
