--- a/app/views/personal_loan/step1.html.erb
+++ b/app/views/personal_loan/step1.html.erb
@@ -14,8 +14,7 @@
         </div>
     </div>
 </section>
-<section class="personal-loan-section">
-  <%debugger%>
+<section class="personal-loan-section custom-container">
   <%= form_for @personal_loan, :url => { :action => @personal_loan.id.nil? ? "create_otp" : "create_otp"}, html: {id:  "basic_personal_loan", class: "basic_personal_loan"} do |f| %>
     <div class="container">
       <div class="row">
@@ -26,49 +25,56 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="form-group">
             <span>First Name <span>*</span></span>
             <%= f.text_field(:first_name, class: "form-control") %>
           </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-6">
           <div class="form-group">
             <span>Middle Name <span>*</span></span>
             <%= f.text_field(:middle_name, class: "form-control") %>
           </div>
         </div>
-        <div class="col-md-4">
+      </div>
+      <div class="row">
+        <div class="col-md-6">
           <div class="form-group">
             <span>Last Name <span>*</span></span>
             <%= f.text_field(:last_name, class: "form-control") %>
           </div>
+        </div>        
+        <div class="col-md-6">
+          <div class="form-group">
+            <span>Mobile Number <span>*</span></span>
+            <%= f.number_field(:mobile_number, class: "form-control") %>
+          </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-3">
-          <div class="form-group">
-            <span>Mobile Number <span>*</span></span>
-            <%= f.text_field(:mobile_number, class: "form-control") %>
-          </div>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="form-group">
             <span>Email <span>*</span></span>
             <%= f.text_field(:email, class: "form-control") %>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="form-group">
             <span>Loan Amount <span>*</span></span>
             <%= f.number_field(:loan_amount, class: "form-control") %>
           </div>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
           <div class="form-group">
             <span>Tenure <span>*</span></span>
             <%= f.select(:tenure, tenure, class: "form-control") %>
           </div>
+        </div>        
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <span><%= f.check_box(:terms_and_conditions) %> Terms & Conditions</span>
         </div>
       </div>      
       <button type="submit" class="btn btn-default">Submit</button>
